Fix docs footer dark mode styles

--- a/src/templates/postTemplate.scss
+++ b/src/templates/postTemplate.scss
@@ -17,7 +17,8 @@
 
 .dark {
     .post-page {
-        blockquote {
+        blockquote,
+        .docs-footer {
             background-color: rgba(255, 255, 255, 0.05) !important;
             border: solid 2px #fff;
         }
